--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <title>Untitled Document</title>
 </head>
 <frameset rows="200,*" cols="*" frameborder="no" border="0" framespacing="0">
-  <frame src="topframe.html" name="topFrame" scrolling="no" noresize="noresize" marginheight="0" id="topFrame" title="topFrame" />
+  <frame src="topframe.html" name="topFrame" scrolling="no" noresize="noresize" marginwidth="0" marginheight="0" id="topFrame" title="topFrame" />
   <frameset cols="250,*" frameborder="no" border="0" framespacing="0">
-    <frame src="leftframe.html" name="leftFrame" scrolling="no" noresize="noresize" marginwidth="0" id="leftFrame" title="leftFrame" />
-    <frame src="mainframe.html" name="mainFrame" marginheight="0" id="mainFrame" title="mainFrame" />
+    <frame src="leftframe.html" name="leftFrame" scrolling="no" noresize="noresize" marginwidth="0" marginheight="0" id="leftFrame" title="leftFrame" />
+    <frame src="mainframe.html" name="mainFrame" marginwidth="0" marginheight="0" id="mainFrame" title="mainFrame" />
   </frameset>
 </frameset>
 <noframes><body>
